Quorum/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntegerUndefined.quorum
class Main
    action Main
        integer v = undefined
        Test(v)
    end

    action Test(integer var)
    end
end
